[feat] Implement Types For Analysis Data

--- a/News/program/segmentationAnalysis/analyze_segmentation_results.ipynb
+++ b/News/program/segmentationAnalysis/analyze_segmentation_results.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lince\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\colour\\utilities\\verbose.py:265: ColourWarning: \"vaab/colour\" was detected in \"sys.path\", please define a \"COLOUR_SCIENCE__COLOUR__IMPORT_VAAB_COLOUR=True\" environment variable to import its objects into \"colour\" namespace!\n",
-      "  warn(*args, **kwargs)  # noqa: B028\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os import path\n",
-    "import cv2 as cv\n",
+    "\n",
+    "import enum\n",
+    "import typing as t\n",
+    "\n",
     "import copy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -68,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lince\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\colour\\utilities\\verbose.py:265: ColourWarning: \"vaab/colour\" was detected in \"sys.path\", please define a \"COLOUR_SCIENCE__COLOUR__IMPORT_VAAB_COLOUR=True\" environment variable to import its objects into \"colour\" namespace!\n",
+      "  warn(*args, **kwargs)  # noqa: B028\n"
+     ]
+    }
+   ],
    "source": [
     "from numberWithUncertainty import numberWithUncertainty \n",
     "\n",
@@ -141,29 +144,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import condoAnalysisData"
+    "from pydantic import BaseModel, RootModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_correction_kmeans_n_init_3_knn_clusters_0_2 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_0.2n\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_0_4 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_0.4n\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_0_6 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_0.6n\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_0_8 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_0.8n\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_sqrt = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_sqrt_n\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_exp_2_over_8 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_n^2/8\"]\n",
-    "pos_correction_kmeans_n_init_3_knn_clusters_exp_3_over_8 = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['Kmeans'][\"KNN_K_n^3/8\"]\n",
+    "from ctypes import Union\n",
     "\n",
-    "pos_correction_slic = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['SLIC_min_max']\n",
-    "pos_correction_mean_sd = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['mean_sd']\n",
+    "\n",
+    "class typesDistribution(BaseModel):\n",
+    "    TN: int\n",
+    "    TP: int\n",
+    "    FN: int\n",
+    "    FP: int\n",
+    "    TOTAL_CLASSIFICATIONS: int\n",
+    "\n",
+    "class classification_evaluation_metrics(BaseModel):\n",
+    "    precision: float\n",
+    "    recall: float\n",
+    "    truePositiveRate: float\n",
+    "    falsePositiveRate: float\n",
+    "    accuracy: float\n",
+    "    balancedAccuracy: float\n",
+    "    jaccardIndex: float\n",
+    "    F1Score: float\n",
+    "    overselectionIndex: float\n",
+    "    typesDistribution: typesDistribution\n",
+    "    \n",
+    "    \n",
+    "# Alredy Called Of Data Point, condo data, ...\n",
+    "class condo_results(BaseModel):\n",
+    "    decimal_places_precision: int\n",
+    "    \n",
+    "    ROI_percentage: float\n",
+    "    ROI_area: float\n",
+    "    \n",
+    "    real_ROI_percentage: float\n",
+    "    real_ROI_area: float\n",
+    "    \n",
+    "    analysis_delimitation_area: float\n",
+    "    real_analysis_delimitation_area: float\n",
+    "    \n",
+    "    delimitation_area_accuracy: float\n",
+    "    ROI_area_accuracy: float\n",
+    "    ROI_percentage_accuracy: float  \n",
+    "    \n",
+    "    classification_evaluation_metrics: classification_evaluation_metrics\n",
+    "\n",
+    "    kmeans_davies_boudin: t.Optional[float] = None #K-means + Inverse-KNN Only\n",
+    "    time_to_analyze: float\n",
+    "    \n",
+    "class color_spaces_results_enum(enum.Enum):\n",
+    "    SHLS_results = 0\n",
+    "    SHSV_results = 1\n",
+    "    LAB_results = 2\n",
+    "    LUV_results = 3\n",
+    "    RGB_results = 4\n",
+    "    OKLAB_results = 5\n",
+    "color_spaces_results = t.NewType(\"color_space\", t.Literal[*map(lambda x: x.name, list(color_spaces_results_enum))]) \n",
+    "    \n",
+    "# FIXME - How I will Call THe results oof All Condos For a specefic tuple (Color Space, Tecnique)?\n",
+    "# TODO - For now, I was calling it condo ds, method (?)\n",
+    "# But I will prob. Change it to (Config Samples Results) or something like it\n",
+    "class condo_ds(RootModel[t.List[condo_results]]): pass\n",
+    "# condo_ds = RootModel[t.List[condo_results]]\n",
+    "class color_spaces_to_condo_ds(RootModel[t.Dict[color_spaces_results, condo_ds]]): pass\n",
+    "class techniques_to_condo_ds(RootModel[t.Dict[str, condo_ds]]): pass\n",
+    "\n",
+    "# methodID = t.NewType(\"methodID\", str)\n",
+    "# FIXME: technique (?)\n",
+    "technique_oriented_df = RootModel[t.Dict[str, color_spaces_to_condo_ds]]\n",
+    "color_space_oriented_df = RootModel[t.Dict[color_spaces_results, techniques_to_condo_ds]]\n",
+    "\n",
+    "# technique_oriented_df = t.Dict[methodID, color_spaces_results]\n",
+    "# color_space_oriented_df = t.Dict[color_spaces_results, methodID]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import condoAnalysisData\n",
+    "\n",
+    "CM_EVAL_2024_DATA = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pos_correction_kmeans_n_init_3_knn_clusters_0_2 : technique_oriented_df \n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_0_4 : technique_oriented_df \n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_0_6 : technique_oriented_df \n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_0_8 : technique_oriented_df \n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_sqrt : technique_oriented_df\n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_exp_2_over_8 : technique_oriented_df \n",
+    "# pos_correction_kmeans_n_init_3_knn_clusters_exp_3_over_8 : technique_oriented_df \n",
+    "\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_0_2 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_0.2n\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_0_4 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_0.4n\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_0_6 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_0.6n\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_0_8 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_0.8n\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_sqrt = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_sqrt_n\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_exp_2_over_8 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_n^2/8\"])\n",
+    "pos_correction_kmeans_n_init_3_knn_clusters_exp_3_over_8 = technique_oriented_df(CM_EVAL_2024_DATA['Kmeans'][\"KNN_K_n^3/8\"])\n",
+    "\n",
+    "# print(condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['SLIC_min_max'])\n",
+    "pos_correction_slic = technique_oriented_df(condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['SLIC_min_max'])\n",
+    "pos_correction_mean_sd = technique_oriented_df(condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['mean_sd'])\n",
     "# pos_correction_min_max = condoAnalysisData.CIENCIAS_MOLECULARES_EVAL_2024['min_max_threshold']"
    ]
   },
